# adk-studio

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json
.kiro/specs/adk-080-feature-parity/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: adk-studio-development.md
.playwright-mcp/: page-2026-05-09T06-41-16-586Z.yml  page-2026-05-09T06-47-44-531Z.yml  page-2026-05-09T06-48-05-857Z.yml  page-2026-05-09T06-49-01-017Z.yml  page-2026-05-09T06-49-34-759Z.yml  page-2026-05-09T06-49-59-810Z.yml  page-2026-05-09T06-52-51-694Z.yml  page-2026-05-09T06-53-18-759Z.yml  page-2026-05-09T06-53-46-728Z.yml  page-2026-05-09T06-54-15-526Z.yml  page-2026-05-09T06-55-07-585Z.yml  page-2026-05-09T08-11-07-854Z.yml  page-2026-05-09T08-11-32-071Z.yml  page-2026-05-09T08-12-32-607Z.yml  page-2026-05-09T08-12-50-987Z.yml  page-2026-05-09T08-13-12-325Z.yml  page-2026-05-09T14-51-01-594Z.yml  page-2026-05-09T14-51-52-561Z.yml
docs/: sse-schema-v2.md
examples/: codegen_demo.rs
src/: embedded.rs  keystore.rs  lib.rs  main.rs
src/codegen/: action_node_codegen.rs  action_node_types.rs  mod.rs  validation.rs
src/schema/: agent.rs  deploy.rs  mod.rs  project.rs  tool.rs  workflow.rs
src/server/: events.rs  graph_runner.rs  handlers.rs  mod.rs  routes.rs  runner.rs  scheduler.rs  sse.rs  state.rs  websocket.rs
src/storage/: filesystem.rs  mod.rs
templates/: chatbot.json  sequential.json
tests/: action_nodes_property_tests.rs  cargo_toml_property_tests.rs  codegen_tests.rs  identity_handler_tests.rs  model_config_property_tests.rs  openrouter_property_tests.rs  read_only_tool_property_tests.rs  resilience_config_property_tests.rs  router_agent_property_tests.rs  runner_builder_property_tests.rs  schema_property_tests.rs  skills_config_property_tests.rs  studio_rust_first_tests.rs  tool_confirmation_property_tests.rs  tool_execution_strategy_property_tests.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.tsx  index.css  main.tsx  version.ts
ui/src/api/: client.ts
ui/src/components/: ErrorBoundary.tsx
ui/src/data/: models.ts
ui/src/docs/: CANVAS_AUDIT.md
ui/src/hooks/: index.ts  triggerInputFlow.integration.test.ts  useAgentActions.ts  useApiKeys.ts  useBuild.ts  useCanvasConnections.ts  useCanvasDragDrop.ts  useCanvasExecution.ts  useCanvasNodes.ts  useCanvasState.ts  useCanvasUndoRedo.ts  useExecution.test.ts  useExecution.ts  useExecutionPath.ts  useHandlePositions.ts  useKeyboardShortcuts.ts  useLayout.test.ts  useLayout.ts  useNodeActions.ts  useSSE.test.ts  useSSE.ts  useTemplateWalkthrough.ts  useTheme.test.ts  useTheme.ts  useThoughtBubbles.ts  useUndoRedo.test.ts  useUndoRedo.ts  useVSCodeProjectSync.ts  useVSCodeThemeSync.ts  useWalkthrough.ts  (+3 more)
(+186 files in other folders)
